--- a/navbar-footer-listingcards.html
+++ b/navbar-footer-listingcards.html
@@ -483,7 +483,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card featured verified">
                     <div class="saved"></div>
@@ -525,7 +526,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
                     <div class="save"></div>
@@ -543,7 +545,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Kwong Sang Hong Grand Building Lodge">Kwong Sang Hong Grand Building Lodge</a>
                             </h2>
-                            <div class="source">owner</div>
+                            <div class="source" title="Owner">owner</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Wanchai . HK Island</div>
@@ -568,9 +570,10 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
-                <div class="listing-card recommended">
+                <div class="listing-card sole">
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="Fortune Court Building">
@@ -587,7 +590,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Fortune Court Building">Fortune Court Building</a>
                             </h2>
-                            <div class="source">agent</div>
+                            <div class="source" title="Sole Agent">sole agent</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -610,7 +613,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
                     <div class="save"></div>
@@ -628,7 +632,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Luxury Building">Luxury Building</a>
                             </h2>
-                            <div class="source">owner</div>
+                            <div class="source" title="Owner">owner</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Mid Levels Central . HK Island</div>
@@ -651,7 +655,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card verified">
                     <div class="save"></div>
@@ -693,7 +698,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card featured">
                     <div class="save"></div>
@@ -712,7 +718,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Richview Terrace">Richview Terrace</a>
                             </h2>
-                            <div class="source">owner</div>
+                            <div class="source" title="Owner">owner</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -735,9 +741,10 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
-                <div class="listing-card">
+                <div class="listing-card recommended">
                     <div class="save"></div>
                     <div class="aspect-ratio">
                         <a class="listing-img" href="#" target="_blank" title="21 Hoi Wan Street">
@@ -753,7 +760,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="21 Hoi Wan Street">21 Hoi Wan Street</a>
                             </h2>
-                            <div class="source">agent</div>
+                            <div class="source" title="Agent">agent</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
@@ -776,7 +783,8 @@
                         </div>
                     </div>
                 </div>
-            </div><!-- Listing Card -->
+            </div>
+            <!-- Listing Card -->
             <div class="listing-layout">
                 <div class="listing-card">
                     <div class="save"></div>
@@ -794,7 +802,7 @@
                             <h2 class="bdg-name bs4 col p-0">
                                 <a href="#" title="Hing Bong Mansion">Hing Bong Mansion</a>
                             </h2>
-                            <div class="source">owner</div>
+                            <div class="source" title="Owner">owner</div>
                         </div>
                         <div class="row bs4 m-0">
                             <div class="hood bs4 col-12">Star St Precinct . Wanchai . HK Island</div>
